# vienna-life-assistant

./: .cursorrules  .gitattributes  .gitignore  ASSESSMENT.md  CHANGELOG.md  CHATBOT.md  COMPLETE.md  ECOSYSTEM_INTEGRATION.md  FEATUREPLOSION_COMPLETE.md  FEATURES_ADDED.md  FRONTEND_GUIDE.md  FUTURE_DUAL_INTERFACE_PROJECT.md  IMPLEMENTATION_STATUS.md  INTEGRATED_MCP_SERVERS.md  LICENSE  MCP_INTEGRATION.md  MCP_STDIO_FIX.md  MCP_TRANSPORT_CLARIFICATION.md  MOBILE_AND_ECOSYSTEM.md  PORT_CONFIGURATION.md  PROJECT_STATUS.md  README.md  SQLITE_MIGRATION.md  STDIO_TRANSPORT_COMPLETE.md  SUCCESS.md  TESTING.md  TRANSPORT_DOCS_UPDATED.md  TROUBLESHOOTING.md  docker-compose.yml  docker_status.txt  ovienna-life-assistantbackend  ps_output.txt  run-tests.ps1  setup-mcp-integration.ps1  start-dev.ps1  start-services.ps1
backend/: .dockerignore  .gitignore  Dockerfile  add_calendar_events.py  add_expense_data.py  add_sample_data.py  alembic.ini  celerybeat-schedule  env.example.fixed  init.sql  mcp_server.py  migrate_settings.py  pytest.ini  requirements.txt
docs/: ARCHITECTURE.md  SETUP.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
web_sota/: index.html  package-lock.json  package.json  pyproject.toml  start.ps1  tsconfig.json  vite.config.ts
web_sota/src/: App.tsx  AppLayout.tsx  index.css  main.tsx
web_sota/src/components/: TransitWidget.tsx
web_sota/src/pages/: ConcertHall.tsx  Dashboard.tsx  KaffeehausHub.tsx  MuseumGuide.tsx  ShoppingOffers.tsx
web_sota/vienna_life_assistant/: __init__.py  server.py
(+92 files in other folders)
