[project]
name = "vienna-life-assistant-sota"
version = "0.1.0"
description = "Vienna Life Assistant - State of the Art (SOTA) Backend"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "fastmcp>=0.4.1",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
